	  - Tourists get automatic typ identification for shop items
	  - Healers can see how wounded monsters are (by L)

	* user interface improvements:
	  - HP notify, showing HP changes in the message area (from NAO)
	  - Menus made aware of the maximum count of an item (by heinrich5991)
	  - Message for some monster cancellation events
	  - When standing on Elbereth, show it in status lines

	* bug fixes:
	  - Fixed crash when player gets killed when entering a new level and
	    a trap on the previous level causes a null pointer dereference
	    when writing the HTML map (related to C343-20).
	  - Really reduce occurrences of hint daemon to once per game
	  - Fixed crash with ray beams at edges of maps
	  - Fixed missing item name with traditional menustyle
	  - Disabled chromatic dragon generation by monster summoning
	  - Fixed sporadic crash with hitpointbar when hp was below 0
	  - Clear dungeon overview info for bones files (reported by Christian
	    Stegen)
	  - Fixed crash when destroying bag of holding containing gold pieces
	  - Fixed gold not merging in containers after container has been BUC
	    tested on altars

	* vanilla bug fixes:
	  - Prevent the Book of the Dead from being destroyed when the
	    player falls into lava. (from GruntHack)
	  - Fix security bug in options handler (reported by Matthew Daley,
	    fixed by Pasi Kallinen)
	  - Honor pickup_burden when picking up gold.
	  - Fix TTY crashing when a location has more than 32k items (from NAO)
	  - Correct article when choking on named artifacts

2012-04-01  UnNetHack 4.0.0
	* Uncursed and blessed scrolls of magic mapping reveal secret doors
	* Blessed scrolls of magic mapping reveal objects
	* Dump log: show same information on final dump as wizard mode
	* Minotaurs respect Elbereth
	* Bones level tracking
	* Conduct: Racial armor tracking
	* extra AC point per worn piece of racial armor
	* Reduce occurrences of hint daemon to once per game